php-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  labels:
    app: php-app
spec:
  replicas: 2  # 2 реплики для отказоустойчивости
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app
        image: 443370672158.dkr.ecr.us-east-1.amazonaws.com/php-app:latest
        ports:
        - containerPort: 80
        readinessProbe:  # Добавляем проверку готовности
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:  # Добавляем проверку работоспособности
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
